--- a/ChatbotPCMG.ipynb
+++ b/ChatbotPCMG.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOWbMXP3mAWU4jy3XNY8nTr",
+      "authorship_tag": "ABX9TyPQ9HrK0r67YrVS3K1T9Nnm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,17 +34,17 @@
       "metadata": {
         "id": "MQJn6nc7fxrj"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Conexão com a IA do Google"
-      ],
+      "cell_type": "code",
+      "source": [],
       "metadata": {
-        "id": "dtdcEYhlohER"
-      }
+        "id": "BGNykV7YsXIe"
+      },
+      "execution_count": 18,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -58,17 +58,8 @@
       "metadata": {
         "id": "U5pRufTYituB"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Listar modelos disponivel"
-      ],
-      "metadata": {
-        "id": "5sMjUY4qi87a"
-      }
     },
     {
       "cell_type": "code",
@@ -80,12 +71,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 138
+          "height": 145
         },
         "id": "TDuMujyai_DS",
-        "outputId": "e2b8940d-b115-492a-a539-d09af228146f"
+        "outputId": "f112a9c6-a4dd-4d9e-9187-3a9a2e35a9b5"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,17 +107,8 @@
       "metadata": {
         "id": "CA1-ohvilHbt"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Parametros de segurança"
-      ],
-      "metadata": {
-        "id": "a7QXaLt0oc_m"
-      }
     },
     {
       "cell_type": "code",
@@ -141,17 +123,8 @@
       "metadata": {
         "id": "DJZCNs_dmxfU"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Iniciando o modelo"
-      ],
-      "metadata": {
-        "id": "Hun6lJQuoagG"
-      }
     },
     {
       "cell_type": "code",
@@ -163,13 +136,36 @@
       "metadata": {
         "id": "h6_vsaBhom5c"
       },
-      "execution_count": null,
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import time"
+      ],
+      "metadata": {
+        "id": "j0Ic9N-H8hws"
+      },
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "timer_start = time.time()  # Iniciar contagem ao iniciar o chatbot"
+      ],
+      "metadata": {
+        "id": "1bgzIyWZ8i8Q"
+      },
+      "execution_count": 77,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "from os import openpty\n",
+        "\n",
         "def chatbot():\n",
         "  print(\"\"\"Olá!\n",
         "\n",
@@ -427,35 +423,120 @@
         "Nome do servidor responsável pelo atendimento.\n",
         "\n",
         "Basta enviar os arquivos que estes serão incluídos nos respetivos procedimentos.\"\"\")\n",
+        "      input(\"Digite sua mensagem: \")\n",
         "\n",
         "    elif opcao.lower() == 'menu':\n",
         "      continue  # Volta ao início do loop e mostra o menu\n",
-        "    elif opcao.lower() == 'sair':\n",
-        "      break  # Sai do loop e encerra o atendimento\n",
         "    elif opcao.lower() == 'digitar':\n",
         "      input(\"Digite sua mensagem: \")\n",
-        "      pass\n",
-        "      break\n",
+        "    elif opcao.lower()== 'sair':\n",
+        "      print(\"\"\"\n",
+        "      Seu atendimento foi encerrado.\n",
+        "      A 9ª Delegacia de Polícia Civil de Abaeté agradece o seu contato.\n",
+        "      Caso ainda precise de nosso atendimento, digite: Menu\"\"\")\n",
+        "\n",
+        "      input(\"Digite sua mensagem: \")\n",
+        "\n",
+        "    elif opcao.lower() == 'Fim':\n",
+        "      break  # Sai do loop e encerra o atendimento\n",
+        "\n",
+        "\n",
         "    else:\n",
         "      print(\"Opção inválida. Por favor, escolha uma opção do menu.\")\n",
         "\n",
-        "  print(\"\"\"Seu atendimento foi encerrado. Caso ainda precise de nosso atendimento, digite: Menu\n",
-        "\n",
+        "  print(\"\"\"\n",
+        "Seu atendimento foi encerrado.\n",
         "A 9ª Delegacia de Polícia Civil de Abaeté agradece o seu contato.\"\"\")\n",
         "\n",
-        "chatbot()"
+        "\n",
+        "\n",
+        "chatbot()\n",
+        "\n"
       ],
       "metadata": {
-        "id": "V5dnXJtcuuCi"
+        "id": "V5dnXJtcuuCi",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "8dc8685d-e867-4256-eb00-d951da6edd85"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Olá!\n",
+            "\n",
+            "Este é o canal de atendimento digital da 9ª Delegacia de Polícia Civil de Abaeté-MG\n",
+            "Trata-se de um canal dedicado para envio de intimações, captação de arquivos, mídias e dados relacionadas a procedimentos.\n",
+            "\n",
+            "Digite o número correspondente ao setor ou informação desejada:\n",
+            "\n",
+            "\n",
+            "    Menu:\n",
+            "    1. Identidade\n",
+            "    2. Registro de Ocorrência\n",
+            "    3. Cópia de Ocorrência\n",
+            "    4. Denúncias\n",
+            "    5. Violência Doméstica / Medidas Protetivas\n",
+            "    6. Intimações\n",
+            "    7. Trânsito\n",
+            "    8. Atestado de Antecedentes\n",
+            "    9. Telefones úteis\n",
+            "    0. Envio de Arquivos\n",
+            "\n",
+            "    Digitar - Para enviar uma mensagem\n",
+            "    Menu - Para voltar ao Menu Principal\n",
+            "    Sair - Encerrar atendimento\n",
+            "    \n",
+            "Escolha uma opção: Sair\n",
+            "\n",
+            "      Seu atendimento foi encerrado.\n",
+            "      A 9ª Delegacia de Polícia Civil de Abaeté agradece o seu contato.\n",
+            "      Caso ainda precise de nosso atendimento, digite: Menu\n",
+            "Digite sua mensagem: gposdmbvpasmbd´nba~db\n",
+            "\n",
+            "    Menu:\n",
+            "    1. Identidade\n",
+            "    2. Registro de Ocorrência\n",
+            "    3. Cópia de Ocorrência\n",
+            "    4. Denúncias\n",
+            "    5. Violência Doméstica / Medidas Protetivas\n",
+            "    6. Intimações\n",
+            "    7. Trânsito\n",
+            "    8. Atestado de Antecedentes\n",
+            "    9. Telefones úteis\n",
+            "    0. Envio de Arquivos\n",
+            "\n",
+            "    Digitar - Para enviar uma mensagem\n",
+            "    Menu - Para voltar ao Menu Principal\n",
+            "    Sair - Encerrar atendimento\n",
+            "    \n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-86-b5f128d1da7a>\u001b[0m in \u001b[0;36m<cell line: 287>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    285\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    286\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 287\u001b[0;31m \u001b[0mchatbot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    288\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-86-b5f128d1da7a>\u001b[0m in \u001b[0;36mchatbot\u001b[0;34m()\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmenu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m     \u001b[0mopcao\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Escolha uma opção: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mopcao\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'1'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    849\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    850\u001b[0m             )\n\u001b[0;32m--> 851\u001b[0;31m         return self._input_request(str(prompt),\n\u001b[0m\u001b[1;32m    852\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    853\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    893\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    894\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 895\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    896\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Sv-ZwWUKi0EF"
+        "id": "Jd6MXYgb4nTK"
       },
       "execution_count": null,
       "outputs": []
