--- a/ChatbotPCMG.ipynb
+++ b/ChatbotPCMG.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQ9HrK0r67YrVS3K1T9Nnm",
+      "authorship_tag": "ABX9TyPRtPG5VQMd8fdI39SoIxOX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -169,7 +169,7 @@
         "def chatbot():\n",
         "  print(\"\"\"Olá!\n",
         "\n",
-        "Este é o canal de atendimento digital da 9ª Delegacia de Polícia Civil de Abaeté-MG\n",
+        "Este é o \"CONECTA PCMG\", canal de atendimento digital da 9ª Delegacia de Polícia Civil de Abaeté-MG\n",
         "Trata-se de um canal dedicado para envio de intimações, captação de arquivos, mídias e dados relacionadas a procedimentos.\n",
         "\n",
         "Digite o número correspondente ao setor ou informação desejada:\n",
