--- a/ChatbotPCMG.ipynb
+++ b/ChatbotPCMG.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPRtPG5VQMd8fdI39SoIxOX",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPzKAFE45tZHY3+cnhQaxry",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +35,7 @@
       "metadata": {
         "id": "MQJn6nc7fxrj"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -43,7 +44,7 @@
       "metadata": {
         "id": "BGNykV7YsXIe"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,7 +59,7 @@
       "metadata": {
         "id": "U5pRufTYituB"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,9 +75,9 @@
           "height": 145
         },
         "id": "TDuMujyai_DS",
-        "outputId": "f112a9c6-a4dd-4d9e-9187-3a9a2e35a9b5"
+        "outputId": "fe1905c3-15cc-48e5-c0f9-f6a1cdc28b4c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +108,7 @@
       "metadata": {
         "id": "CA1-ohvilHbt"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -123,7 +124,7 @@
       "metadata": {
         "id": "DJZCNs_dmxfU"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +137,7 @@
       "metadata": {
         "id": "h6_vsaBhom5c"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +148,7 @@
       "metadata": {
         "id": "j0Ic9N-H8hws"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -158,7 +159,7 @@
       "metadata": {
         "id": "1bgzIyWZ8i8Q"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -450,20 +451,10 @@
         "\n",
         "\n",
         "\n",
-        "chatbot()\n",
-        "\n"
+        "chatbot()\n"
       ],
       "metadata": {
-        "id": "V5dnXJtcuuCi"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Jd6MXYgb4nTK"
+        "id": "SYT42qHHgjHq"
       },
       "execution_count": null,
       "outputs": []
